import "web-ui/common_base.proto";

message CAccountPrivateAppList {
	repeated int32 appids = 1;
}

message CAccountPrivateApps_GetPrivateAppList_Request {
}

message CAccountPrivateApps_GetPrivateAppList_Response {
	optional .CAccountPrivateAppList private_apps = 1;
}

message CAccountPrivateApps_ToggleAppPrivacy_Request {
	repeated int32 appids = 1;
	optional bool private = 2;
}

message CAccountPrivateApps_ToggleAppPrivacy_Response {
}

message CAccountPrivateApsClient_NotifyPrivateAppListChanged_Notification {
	optional .CAccountPrivateAppList private_apps = 1;
}

service AccountPrivateApps {
	rpc GetPrivateAppList (.CAccountPrivateApps_GetPrivateAppList_Request) returns (.CAccountPrivateApps_GetPrivateAppList_Response);
	rpc ToggleAppPrivacy (.CAccountPrivateApps_ToggleAppPrivacy_Request) returns (.CAccountPrivateApps_ToggleAppPrivacy_Response);
}

service AccountPrivateAppsClient {
	rpc NotifyPrivateAppListChanged (.CAccountPrivateApsClient_NotifyPrivateAppListChanged_Notification) returns (.NoResponse);
}

